# substrate-oracle

./: Cargo.toml  README.md
.cargo/: config
src/: external_value.rs  lib.rs  mock.rs  oracle.rs  period_handler.rs  tests.rs
