[package]
authors = ["sadsnake sadsnake@mixbytes.io"]
edition = '2018'
name = 'pallet-oracle'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
safe-mix = { default-features = false, version = '1.0.0' }

[dependencies.frame-support]
default-features = false
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.system]
default-features = false
package = 'frame-system'
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.assets]
default-features = false
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"
package = "pallet-generic-asset"

[dependencies.timestamp]
default-features = false
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"
package = "pallet-timestamp"

[dev-dependencies.sp-core]
default-features = false
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-arithmetic]
default-features = false
version = "2.0.0-alpha.2"
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"
package = "sp-std"

[dependencies.tablescore]
default-features = false
git = "https://github.com/mixbytes/substrate-tablescore.git"
package = "pallet-tablescore"
version = "0.1.1"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'assets/std',
    'timestamp/std',
    'sp-core/std',
    'tablescore/std',
]
